fixed the updated on transactionlist , updated css on login signup, transaction list and transaction form added all the backend of report and added http request for it and fix old ones , adjust the SecurityConfig antimathchers etc